--- a/Documents/krithika_curriculum_vitae.tex
+++ b/Documents/krithika_curriculum_vitae.tex
@@ -104,7 +104,7 @@ Further, the well-validated aromatic chemistry and pathways for formation of aro
 
   \textbf{Indian Institute of Technology Madras} \hfill \textbf{2007} \\ 
 \textsl{Bachelor's Project} \\ 
-Worked with Prof. N. R. Panchapakesan, Department of Aerospace Engineering, on\\
+Worked with Prof. K. Srinivasan, Department of Mechanical Engineering, and Prof. N. R. Panchapakesan, Department of Aerospace Engineering, on\\
 Aerodynamics of flow around rectangular cylinders. 
 
 \textbf{TVS Motors, Hosur, India} \hfill \textbf{2006} \\
